--- a/exercise_project.ipynb
+++ b/exercise_project.ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -594,7 +596,7 @@
     "\n",
     "def energy_function():\n",
     "    # reading the exel file...\n",
-    "    excel_file = pd.ExcelFile('assets/Energy Indicators.xls')\n",
+    "    excel_file = pd.ExcelFile('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/Energy Indicators.xls')\n",
     "\n",
     "    excel_file.sheet_names # getting the sheetname...\n",
     "\n",
@@ -656,7 +658,7 @@
     "\n",
     "def GDP_function():\n",
     "    #loading gdp data...\n",
-    "    GDP = pd.read_csv('assets/world_bank.csv')\n",
+    "    GDP = pd.read_csv('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/world_bank.csv')\n",
     "    GDP.columns = [items.strip() for items in GDP.columns] #stripping columns of whitespaces\n",
     "\n",
     "    # renaming columns...\n",
@@ -699,7 +701,7 @@
     "def ScimEn_function():\n",
     "    \n",
     "    #loading xslx file...\n",
-    "    file = pd.ExcelFile('assets/scimagojr-3.xlsx')\n",
+    "    file = pd.ExcelFile('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/scimagojr-3.xlsx')\n",
     "\n",
     "    file.sheet_names #getting sheet names\n",
     "\n",
@@ -1160,8 +1162,9 @@
     "def answer_nine():\n",
     "\n",
     "    def new_column(para):\n",
-    "        import numpy as np\n",
-    "        if para['% Renewable'] >= 17.02028:\n",
+    "        \n",
+    "        final_df['% Renewable'] = final_df['% Renewable'].astype(float)\n",
+    "        if para['% Renewable'] >= np.median(final_df['% Renewable']):\n",
     "            return 1\n",
     "        return 0\n",
     "    \n",
@@ -1462,7 +1465,6 @@
    "source": [
     "def answer_twelve():\n",
     "    final_df['population'] = final_df['population'].map('{:,}'.format)\n",
-    "\n",
     "    return final_df['population']\n",
     "\n",
     "answer_twelve()"
@@ -1472,7 +1474,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
