--- a/exercise_project.ipynb
+++ b/exercise_project.ipynb
@@ -595,8 +595,7 @@
     "\n",
     "\n",
     "def energy_function():\n",
-    "    # reading the exel file...\n",
-    "    excel_file = pd.ExcelFile('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/Energy Indicators.xls')\n",
+    "    excel_file = pd.ExcelFile('assets/Energy Indicators.xls') # reading the exel file\n",
     "\n",
     "    excel_file.sheet_names # getting the sheetname...\n",
     "\n",
@@ -657,8 +656,7 @@
     "\n",
     "\n",
     "def GDP_function():\n",
-    "    #loading gdp data...\n",
-    "    GDP = pd.read_csv('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/world_bank.csv')\n",
+    "    GDP = pd.read_csv('assets/world_bank.csv') #loading gdp data...\n",
     "    GDP.columns = [items.strip() for items in GDP.columns] #stripping columns of whitespaces\n",
     "\n",
     "    # renaming columns...\n",
@@ -699,9 +697,7 @@
     "\n",
     "\n",
     "def ScimEn_function():\n",
-    "    \n",
-    "    #loading xslx file...\n",
-    "    file = pd.ExcelFile('C:/Users/USER/OneDrive/Desktop/intro_to_data_science/datasets/coursera_datasets/assignments/assignment3/assets/scimagojr-3.xlsx')\n",
+    "    file = pd.ExcelFile('assets/scimagojr-3.xlsx') #loading xslx file...\n",
     "\n",
     "    file.sheet_names #getting sheet names\n",
     "\n",
@@ -712,6 +708,7 @@
     "    ScimEn_to_use['Country'] = [countries.strip() for countries in ScimEn_to_use['Country']] #stripping countries of whitespaces\n",
     "    \n",
     "    return ScimEn_to_use\n",
+    "\n",
     "\n",
     "Energy, GDP, ScimEn= energy_function(), GDP_function(), ScimEn_function() #making functions a global variable\n",
     "\n",
@@ -859,7 +856,7 @@
     }
    ],
    "source": [
-    "mean_gdp = answer_two() #making answer two func a global variable\n",
+    "mean_gdp = answer_two() #making answer two function a global variable\n",
     "\n",
     "\n",
     "def answer_three():\n",
